syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "./proto;orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrderByUserId(GetOrderByUserIdRequest) returns (GetOrderByUserIdResponse) {}
  rpc GetItemsOfOrderById(GetItemsOfOrderByIdRequest) returns (GetItemsOfOrderByIdResponse) {}
}

message GetItemsOfOrderByIdRequest {
  int32 order_id = 1;
}

message GetItemsOfOrderByIdResponse {
  repeated int32 listOfProductsId = 1;
}

message GetOrderByUserIdRequest {
  int32 user_id = 1;
}

message GetOrderByUserIdResponse {
  Order order = 1;
}

message CreateOrderRequest {
  int32 id = 1;
  int32 cart_id = 2;
  string TypeOfTransportation = 3;
}

message CreateOrderResponse {
 google.protobuf.Timestamp delivered_at = 1;
}

message Order {
  int32 id = 1;
  int32 cart_id = 2;
  int32 create_at = 3;
  int32 delivered_at = 4;
  string transport_type = 5;
  int32 user_id = 6;
}